talos/cilium/manifests/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cilium
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
