talos/cilium/manifests/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  # annotations:
  #   gethomepage.dev/enabled: "true"
  #   gethomepage.dev/name: Immich
  #   gethomepage.dev/icon: immich
  #   gethomepage.dev/description: "High performance self-hosted photo and video management solution."
  #   gethomepage.dev/pod-selector: app=immich-server
  labels:
    app.kubernetes.io/name: hubble-ui
  name: hubble-ui-httproute
spec:
  parentRefs:
  - name: cilium-private-gateway
    namespace: cilium
    sectionName: https
  hostnames:
  - hubble.t.yanello.net
  rules:
  - backendRefs:
    - name: hubble-ui
      port: 80
