talos/cilium/manifests/publicGateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-public-gateway
spec:
  gatewayClassName: cilium
  addresses:
    - value: 10.20.8.101 
      type: IPAddress
  listeners:
    - name: http
      protocol: HTTP
      hostname: "*.t.yanello.net"
      port: 80
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: HTTPRoute
    - name: http-root
      protocol: HTTP
      hostname: "t.yanello.net"
      port: 80
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: HTTPRoute
    - name: https
      protocol: HTTPS
      hostname: "*.t.yanello.net"
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - name: cilium-public
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: HTTPRoute
    - name: https-root
      protocol: HTTPS
      hostname: "t.yanello.net"
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - name: cilium-public
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: HTTPRoute
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-redirect-public # send http traffic to the https listener
spec:
  parentRefs:
    - name: cilium-public-gateway
      sectionName: http
  hostnames:
    - "*.t.yanello.net"
    - "t.yanello.net"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
